2007-12-17 Alasdair Allan <aa@astro.ex.ac.uk>

	* demo/google_mobile_maps/*: Hacking Google Maps for Sky into the
	  Google Mobile Maps (Maps.app) on the Apple iPod touch.
	  
2007-12-16 Alasdair Allan <aa@astro.ex.ac.uk>

	* demo/google_maps/*: Plastic-enabling Google Maps for Sky.
	
2007-11-08 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/istar/*: Fixes for iUI and the iPod touch
        
2007-10-10 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/pq_event.pl: Event client for Palomar-Quest events

2007-09-25 Alasdair Allan <aa@astro.ex.ac.uk>

	* widgets/eSTAR Status.wdgt/*: Removed link to FTN web camera.
	
2007-09-24 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/istar/*: Basic network status for iPhone using iUI

2007-09-14 Alasdair Allan <aa@astro.ex.ac.uk>

	* demo/google_sky/plastic.kml: Network link for Plastic application
	
	* demo/google_sky/Diagram.ppt: Diagram for proof-of-concept Plastic
	
2007-08-26 Alasdair Allan <aa@astro.ex.ac.uk>

        * startup/google: Startup script for the Google event_client.pl for
	  estar4.astro.ex.ac.uk and the.
	  
	* demo/google_sky/google_plastic.pl: Outbound Plastic added.


2007-08-25 Alasdair Allan <aa@astro.ex.ac.uk>

        * demo/google_sky/google_plastic.pl: Plastic-enabling Google Sky.
	
2007-08-22 Alasdair Allan <aa@astro.ex.ac.uk>

        * demo/google_sky/event_client.pl: Basic infrastructure in place.
        
2007-08-21 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/cgi-bin/status.cgi, scoring.cgi & performance.cgi:
          Modified to work on a month-by-month basis.
          
2007-08-16 Alasdair Allan <aa@astro.ex.ac.uk>

	* ogle_fetch_v2.pl: Updated ogle_fetch for new V2 of PLOP
	
	* startup/cron/ogle_fetch_*: Updated to run ogle_fetch_v2.pl
	
2007-07-10 Alasdair Allan <aa@astro.ex.ac.uk>

	* ogle_DB_client.pl: Added event client to slurp live OGLE feed
          into the STAP service database.

2007-05-21 Alasdair Allan <aa@astro.ex.ac.uk>
